--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,14 @@
 /*  your css code here. If applicable */
+#yellow{
+	background:yellow;
+	border: 1px green;
+}
+
+#red{
+	background:red;
+	border: 1px black;
+}
+#green{
+	background:green;
+	border: 1px yellow;
+}
